--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,68 @@
     box-sizing: border-box;
 } */
 
-.light-background{
+.light-background {
     background-color: #e0daca !important;
 }
-.soft-background{
+
+.soft-background {
     background-color: #d9d3c4 !important;
 }
-.medium-background{
+
+.medium-background {
     background-color: #95783e !important;
 }
 
-.light-color{
+.light-color {
     color: #e0daca !important;
 }
-.soft-color{
+
+.soft-color {
     color: #d9d3c4 !important;
 }
-.medium-color{
+
+.medium-color {
     color: #95783e !important;
 }
 
-header{
-    & img{
+header {
+    & img {
         height: 6rem;
     }
 }
+
+.padding-container {
+        padding: 0 20%;
+}
+
+.buy-product{
+    height: 20rem;
+}
+
+.products{
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+}
+
+.dmaria-card{
+    width: 20rem;
+    & button{
+        color: white;
+    }
+}
+
+
+
+@media screen and (max-width: 767px) {
+    .padding-container {
+        padding: 0 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .padding-container {
+        padding: 0 4rem;
+    }
+}
+
