--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@
 }
 
 header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     & img {
         height: 6rem;
     }
